# MAB_VRU_Signalisation

./: .coverage  .gitignore  MAB_e.py  MAB_u.py  Makefile  README.md  main.py  models.py  pyproject.toml  pyproject_quality.toml  pytest.ini  requirements.txt  resultats.csv  resultats_V2I.csv  resultats_v2i.csv  resultats_v2v.csv  setup.cfg  setup.py  simulation.py  simulation_mab.py  simulation_test.csv  sumoTrace.csv  sumoTraceCroisement.csv  sumoTrace_edge.csv  sumoTrace_loin.csv  test_results_ucb.csv  test_results_ucb_v2i.csv  test_results_ucb_v2v.csv  usagerstest.csv
MAB/: MAB_Ts.py  MAB_e.py  MAB_u.py
SUMO/: croisement.net.xml  croisement.rou.xml  croisement.sumocfg  intersection.net.xml  intersection.rou.xml  intersection.sumocfg  new.rou.xml  new.sumocfg  route_droite.net.xml  route_droite.rou.xml  route_droite.sumocfg  route_droite_loin.net.xml  route_droite_loin.sumocfg  sumoTrace.xml  sumoTraceCroisement.xml  sumoTrace_edge.xml  sumoTrace_loin.xml  trace.xml  tripinfo.xml
results/: resultats_epsilon-greedy.csv  resultats_epsilon-greedy_v2i.csv  resultats_epsilon-greedy_v2v.csv  resultats_thompson.csv  resultats_thompson_v2i.csv  resultats_thompson_v2v.csv  resultats_ucb.csv  resultats_ucb_v2i.csv  resultats_ucb_v2v.csv
simulation/: metric.py  models.py  protocols.py  simulation.py
src/: main.py
src/MAB_VRU_Signalisation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/UNKNOWN.egg-info/: SOURCES.txt
src/mab_vru/: main.py  (+1 more)
src/mab_vru.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: README.md  conftest.py  requirements.txt
(+21 files in other folders)
