[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mab_vru"
version = "0.1.0"
description = "Multi-Armed Bandit based V2V/V2I protocol selection for VRU signalization"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "traci",
    "sumolib"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mab_vru*"]
namespaces = true