[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mab_vru"
version = "0.1.0"
description = "Multi-Armed Bandit based V2V/V2I protocol selection for VRU signalization"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0,<2.0.0",
    "pandas>=1.3.0,<3.0.0",
    "matplotlib>=3.4.0,<4.0.0",
    "traci>=1.19.0",
    "sumolib>=1.19.0",
    "tqdm>=4.65.0,<5.0.0",
    "psutil>=5.8.0,<6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-xdist>=3.0.0,<4.0.0",
    "black>=22.0.0,<24.0.0",
    "flake8>=6.0.0,<7.0.0",
    "mypy>=1.0.0,<2.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mab_vru*"]
namespaces = true